--- a/RotatingBearingUI/App.razor
+++ b/RotatingBearingUI/App.razor
@@ -1,12 +1,7 @@
-﻿ <Router AppAssembly="@typeof(App).Assembly">
-    <Found Context="routeData">
-       <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-    </Found>
-    <NotFound>
-        <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
-        </LayoutView>
-    </NotFound>
-</Router> 
+﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Routing
+
+<Router AppAssembly="typeof(Program).Assembly">
+    <RouteView DefaultLayout="typeof(MainLayout)" />
+    <FocusOnNavigate />
+</Router>
