--- a/RotatingBearingUITest/Shared/MainLayout.razor
+++ b/RotatingBearingUITest/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>RotatingBearingUITest</PageTitle>
+<PageTitle>Rotating Bearing Simulation</PageTitle>
 
 <div class="page">
     <div class="sidebar">
