--- a/RotatingBearingUITest/_Imports.razor
+++ b/RotatingBearingUITest/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using RotatingBearingUITest
 @using RotatingBearingUITest.Shared
+@using BlazorBootstrap
+@using IgniteUI.Blazor.Controls
