--- a/RotatingBearingUITest/Pages/Index.razor
+++ b/RotatingBearingUITest/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Rotating Bending Main Bearing Test Bench System</h1>
 
 Welcome to your new app.
 
